# graficzka

./: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  main.cpp
